terraform/servers.tf
resource "aws_instance" "app_server" {
  count                       = 2
  ami                         = data.aws_ami.latest_ubuntu.id
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public_subnet_1.id
  vpc_security_group_ids      = [aws_security_group.app_sg.id]
  key_name                    = var.key_name
  associate_public_ip_address = true

  tags = {
    Name = "${var.tags["Project"]}-app-server"
  }
}

# resource "aws_instance" "app_server_2" {
#   ami                         = data.aws_ami.latest_ubuntu.id
#   instance_type               = "t2.micro"
#   subnet_id                   = aws_subnet.public_subnet_2.id
#   vpc_security_group_ids      = [aws_security_group.app_sg.id]
#   key_name                    = var.key_name
#   associate_public_ip_address = true

#   tags = {
#     Name = "${var.tags["Project"]}-app-server_2"
#   }
# }
